testing another page 3

--- a/app/home.html
+++ b/app/home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>HELLO KURT!</h2>
+      <h1>Hello, this is our home page</h2>
       <br>
       <p>Click <a href="/welcome">here</a> to go welcome.</p>
     </div>
