--- a/app/models.html
+++ b/app/models.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="0; /html/index.html" />
+<!DOCTYPE html>
+<head>
+<meta http-equiv="refresh" content="0; url=./html/index.html" />
+</head>
